Added ssh bruteforce, ftp bruteforce, vuln scanner

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,17 +3,23 @@ platform = espressif32@6.5.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+board_build.filesystem = littlefs
 
 lib_deps =
-    ESP Async WebServer
-    AsyncTCP
+    esphome/ESPAsyncWebServer-esphome@^3.1.0
     marian-craciunescu/ESP32Ping@^1.7.0
+    bblanchon/ArduinoJson@^6.21.2
+    lib/LibSSH-ESP32
+    ldab/ESP32_FTPClient
 
 lib_ignore =
     AsyncTCP_RP2040W
 
-board_build.filesystem = littlefs
-
 build_flags =
+    -std=gnu++11  # Ensure C++11 or newer
     -DARDUINO_ARCH_ESP32
     -DASYNC_WEBSERVER_REGEX
+    -D LWIP_RAW=1             # Enable raw sockets
+    -D LWIP_TIMEVAL_PRIVATE=0 # Fix timing issues
+    -Ilib/LibSSH-ESP32/src
+    -DLIBSSH_ESP32
